@startuml
!include style.puml
skinparam arrowThickness 1.1
skinparam arrowColor UI_COLOR_T4
skinparam classBackgroundColor UI_COLOR
skinparam defaultFontSize 20

left to right direction

package "UI" {
' UI components
interface Ui
abstract class UiPart
class UiManager
class MainWindow
class HelpWindow
class ResultDisplay
class PersonListPanel
class PersonDetailPanel
class PersonCard
class StatusBarFooter
class CommandBox
}

package "Model" {
class HiddenModel #FFFFFF
}

package "Logic" {
class HiddenLogic #FFFFFF
}

class HiddenOutside #FFFFFF
HiddenOutside ..> Ui

' UI relationships using multiplicities only with colon syntax:
UiManager .left.|> Ui
UiManager --> MainWindow : 1
MainWindow *-- CommandBox : 1
MainWindow *-- ResultDisplay : 1
MainWindow *-- PersonListPanel : 1
MainWindow *-- PersonDetailPanel : 1
MainWindow *-- StatusBarFooter : 1
MainWindow --> HelpWindow : 0..1

PersonListPanel --> PersonCard : *

MainWindow -left-|> UiPart

ResultDisplay --|> UiPart
CommandBox --|> UiPart
PersonListPanel --|> UiPart
PersonDetailPanel --|> UiPart
PersonCard --|> UiPart
StatusBarFooter --|> UiPart
HelpWindow --|> UiPart

' Dependencies with Model/Logic:
PersonCard ..> HiddenModel
UiManager --> HiddenLogic
MainWindow --> HiddenLogic

@enduml
